# difference-voxelization

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
cmake/: dawn.cmake  imgui.cmake
src/: app.hpp  camera.hpp  camera2.cpp  camera2.hpp  context.hpp  detect_object.hpp  external.cpp  glfw_utils.cpp  glfw_utils.hpp  globals.hpp  image.hpp  imgui_utils.cpp  imgui_utils.hpp  insect_swarm.hpp  main.cpp  material.hpp  mesh.hpp  observation_camera.hpp  renderer.hpp  scene_object.hpp  skybox.hpp  transform.hpp  triangle.hpp  utils.cpp  utils.hpp  webgpu_utils.cpp  webgpu_utils.hpp  window.hpp
src/core/: context.hpp  downsampler.hpp  multi_camera_capture.hpp  noise_pass.cpp  noise_pass.hpp  renderer.hpp  window.hpp
src/scene/: free_camera.hpp  insect_swarm.hpp  material.hpp  mesh.hpp  observation_camera.hpp  scene_object.hpp  skybox.hpp
src/shaders/: downsample.wgsl  noise_pass.wgsl  skybox.wgsl  triangle.wgsl  unlit.wgsl
src/vision/: cluster_detections.hpp  detect_object.hpp  track_clusters.hpp
